[project]
name = "Habitrax"
version = "0.3.4"
description = "A terminal-based productivity and life-tracking system."
readme = "README.md"
authors = [{ name = "Caleb 'Darki' Sibanda", email = "darkian.dev@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["tuikit>=0.1.1,<0.2.0"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Utilities"
]

keywords = [
    "cli", "tracker", "productivity", 
    "habits", "terminal", "self-improvement"
]

[project.scripts]
habitrax = "hbx.__main__:main"

[project.urls]
Homepage = "https://github.com/2kDarki/Habitrax"
Repository = "https://github.com/2kDarki/Habitrax"
Issues = "https://github.com/2kDarki/Habitrax/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# ----------------------------
# setuptools-specific settings
# ----------------------------
[tool.setuptools]
# tell setuptools where packages live
package-dir = {"" = "src"}
# include package data according to package-data mapping below
include-package-data = true

# use find to discover packages automatically
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# explicit package-data mapping: include all JSON files in hbx/data
[tool.setuptools.package-data]
"hbx" = ["data/*.json"]